feat: implement order processing and reporting features with discount management